@@ -1,5 +1,10 @@
 2014-08-31  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
+	* mime-edit.el (mime-edit-pgp-get-signers): Fix `mapcar' called
+	for effect.
+
+2014-08-31  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
 	* mime-image.el (mime-image-normalize-xbm-buffer): Add comment for
 	using save-excursion+set-buffer.
 
